--- a/less/header.less
+++ b/less/header.less
@@ -1,1 +1,16 @@
 // Insert your styling here.
+
+#navbar {
+	.container {
+		.navbar-header {
+			.logo {
+				width: 80%;
+				max-width: 400px;
+
+				img {
+					width: 100%;
+				}
+			}
+		}
+	}
+}
