--- a/less/variables.less
+++ b/less/variables.less
@@ -6,6 +6,9 @@
 // Global values
 // --------------------------------------------------
 
+@cbf-light-blue:	rgb(30, 157, 216);
+@cbf-dark-blue:		rgb( 2,  66, 111);
+
 // Grays
 // -------------------------
 
