--- a/less/content.less
+++ b/less/content.less
@@ -1,1 +1,20 @@
 // Insert your styling here.
+
+.content-region {
+	.make-xs-column(12);
+	.make-sm-column(7);
+	.make-md-column(8);
+	.make-lg-column(6);
+	.make-lg-column-push(3);
+}
+
+.sidebar-1-region, .sidebar-2-region {
+	.make-xs-column(12);
+	.make-sm-column(5);
+	.make-md-column(4);
+	.make-lg-column(3);
+}
+
+.sidebar-1-region {
+	.make-lg-column-pull(6);
+}
