--- a/less/header.less
+++ b/less/header.less
@@ -1,16 +1,62 @@
-// Insert your styling here.
-
 #navbar {
-	.container {
-		.navbar-header {
-			.logo {
-				width: 80%;
-				max-width: 400px;
+	.navbar-header {
+		.make-xs-column(12);
+		.make-sm-column(4);
+		.make-md-column(4);
+		.make-lg-column(4);
 
-				img {
-					.img-responsive;
+		.logo {
+			width: 85%;
+			
+			img {
+				.img-responsive;
+			}
+		}
+	}
+
+	.navbar-collapse {
+		.make-sm-column(8);
+		.make-md-column(8);
+		.make-lg-column(8);
+
+		.navbar-nav {
+			.active {
+				font-weight: bold;
+				background-color: inherit;
+			}
+		}
+	}
+}
+
+#page-header {
+	.region-header {
+		.well;
+		color: white;
+		background: @cbf-light-blue;
+
+		.nav {
+			li {
+				.dropdown-menu li {
+					color: @cbf-dark-blue;
+					margin-left: 5px;
+
+					a {
+						border: 0px;
+					}
+				}
+
+				a {
+					border: 1px solid @gray-lighter;
+				}
+
+				a:hover, a:focus {
+					color: @cbf-dark-blue;
 				}
 			}
+		}
+
+		.nav li a, .block-views {
+			margin: 5px;
 		}
 	}
 }
