--- a/css/style.css
+++ b/css/style.css
@@ -6687,6 +6687,13 @@ table .checkbox input[type="checkbox"] {
     left: 25%;
   }
 }
+.content-region .page-header {
+  padding-left: 60px;
+}
+.content-region .page-header i {
+  width: 60px;
+  margin-left: -60px;
+}
 .sidebar-1-region,
 .sidebar-2-region {
   float: left;
@@ -6721,4 +6728,230 @@ table .checkbox input[type="checkbox"] {
   .sidebar-1-region {
     right: 50%;
   }
+}
+.content-region .block-views,
+.sidebar-1-region .block-views,
+.sidebar-2-region .block-views {
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  border-color: #02426f;
+}
+.content-region .block-views > .list-group,
+.sidebar-1-region .block-views > .list-group,
+.sidebar-2-region .block-views > .list-group {
+  margin-bottom: 0;
+}
+.content-region .block-views > .list-group .list-group-item,
+.sidebar-1-region .block-views > .list-group .list-group-item,
+.sidebar-2-region .block-views > .list-group .list-group-item {
+  border-width: 1px 0;
+}
+.content-region .block-views > .list-group .list-group-item:first-child,
+.sidebar-1-region .block-views > .list-group .list-group-item:first-child,
+.sidebar-2-region .block-views > .list-group .list-group-item:first-child {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+.content-region .block-views > .list-group .list-group-item:last-child,
+.sidebar-1-region .block-views > .list-group .list-group-item:last-child,
+.sidebar-2-region .block-views > .list-group .list-group-item:last-child {
+  border-bottom: 0;
+}
+.content-region .block-views > .table,
+.sidebar-1-region .block-views > .table,
+.sidebar-2-region .block-views > .table,
+.content-region .block-views > .table-responsive > .table,
+.sidebar-1-region .block-views > .table-responsive > .table,
+.sidebar-2-region .block-views > .table-responsive > .table {
+  margin-bottom: 0;
+}
+.content-region .block-views > .panel-body + .table,
+.sidebar-1-region .block-views > .panel-body + .table,
+.sidebar-2-region .block-views > .panel-body + .table,
+.content-region .block-views > .panel-body + .table-responsive,
+.sidebar-1-region .block-views > .panel-body + .table-responsive,
+.sidebar-2-region .block-views > .panel-body + .table-responsive {
+  border-top: 1px solid #dddddd;
+}
+.content-region .block-views > .table > tbody:first-child th,
+.sidebar-1-region .block-views > .table > tbody:first-child th,
+.sidebar-2-region .block-views > .table > tbody:first-child th,
+.content-region .block-views > .table > tbody:first-child td,
+.sidebar-1-region .block-views > .table > tbody:first-child td,
+.sidebar-2-region .block-views > .table > tbody:first-child td {
+  border-top: 0;
+}
+.content-region .block-views > .table-bordered,
+.sidebar-1-region .block-views > .table-bordered,
+.sidebar-2-region .block-views > .table-bordered,
+.content-region .block-views > .table-responsive > .table-bordered,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered {
+  border: 0;
+}
+.content-region .block-views > .table-bordered > thead > tr > th:first-child,
+.sidebar-1-region .block-views > .table-bordered > thead > tr > th:first-child,
+.sidebar-2-region .block-views > .table-bordered > thead > tr > th:first-child,
+.content-region .block-views > .table-responsive > .table-bordered > thead > tr > th:first-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > thead > tr > th:first-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > thead > tr > th:first-child,
+.content-region .block-views > .table-bordered > tbody > tr > th:first-child,
+.sidebar-1-region .block-views > .table-bordered > tbody > tr > th:first-child,
+.sidebar-2-region .block-views > .table-bordered > tbody > tr > th:first-child,
+.content-region .block-views > .table-responsive > .table-bordered > tbody > tr > th:first-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tbody > tr > th:first-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tbody > tr > th:first-child,
+.content-region .block-views > .table-bordered > tfoot > tr > th:first-child,
+.sidebar-1-region .block-views > .table-bordered > tfoot > tr > th:first-child,
+.sidebar-2-region .block-views > .table-bordered > tfoot > tr > th:first-child,
+.content-region .block-views > .table-responsive > .table-bordered > tfoot > tr > th:first-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tfoot > tr > th:first-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tfoot > tr > th:first-child,
+.content-region .block-views > .table-bordered > thead > tr > td:first-child,
+.sidebar-1-region .block-views > .table-bordered > thead > tr > td:first-child,
+.sidebar-2-region .block-views > .table-bordered > thead > tr > td:first-child,
+.content-region .block-views > .table-responsive > .table-bordered > thead > tr > td:first-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > thead > tr > td:first-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > thead > tr > td:first-child,
+.content-region .block-views > .table-bordered > tbody > tr > td:first-child,
+.sidebar-1-region .block-views > .table-bordered > tbody > tr > td:first-child,
+.sidebar-2-region .block-views > .table-bordered > tbody > tr > td:first-child,
+.content-region .block-views > .table-responsive > .table-bordered > tbody > tr > td:first-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tbody > tr > td:first-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tbody > tr > td:first-child,
+.content-region .block-views > .table-bordered > tfoot > tr > td:first-child,
+.sidebar-1-region .block-views > .table-bordered > tfoot > tr > td:first-child,
+.sidebar-2-region .block-views > .table-bordered > tfoot > tr > td:first-child,
+.content-region .block-views > .table-responsive > .table-bordered > tfoot > tr > td:first-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tfoot > tr > td:first-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tfoot > tr > td:first-child {
+  border-left: 0;
+}
+.content-region .block-views > .table-bordered > thead > tr > th:last-child,
+.sidebar-1-region .block-views > .table-bordered > thead > tr > th:last-child,
+.sidebar-2-region .block-views > .table-bordered > thead > tr > th:last-child,
+.content-region .block-views > .table-responsive > .table-bordered > thead > tr > th:last-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > thead > tr > th:last-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > thead > tr > th:last-child,
+.content-region .block-views > .table-bordered > tbody > tr > th:last-child,
+.sidebar-1-region .block-views > .table-bordered > tbody > tr > th:last-child,
+.sidebar-2-region .block-views > .table-bordered > tbody > tr > th:last-child,
+.content-region .block-views > .table-responsive > .table-bordered > tbody > tr > th:last-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tbody > tr > th:last-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tbody > tr > th:last-child,
+.content-region .block-views > .table-bordered > tfoot > tr > th:last-child,
+.sidebar-1-region .block-views > .table-bordered > tfoot > tr > th:last-child,
+.sidebar-2-region .block-views > .table-bordered > tfoot > tr > th:last-child,
+.content-region .block-views > .table-responsive > .table-bordered > tfoot > tr > th:last-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tfoot > tr > th:last-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tfoot > tr > th:last-child,
+.content-region .block-views > .table-bordered > thead > tr > td:last-child,
+.sidebar-1-region .block-views > .table-bordered > thead > tr > td:last-child,
+.sidebar-2-region .block-views > .table-bordered > thead > tr > td:last-child,
+.content-region .block-views > .table-responsive > .table-bordered > thead > tr > td:last-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > thead > tr > td:last-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > thead > tr > td:last-child,
+.content-region .block-views > .table-bordered > tbody > tr > td:last-child,
+.sidebar-1-region .block-views > .table-bordered > tbody > tr > td:last-child,
+.sidebar-2-region .block-views > .table-bordered > tbody > tr > td:last-child,
+.content-region .block-views > .table-responsive > .table-bordered > tbody > tr > td:last-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tbody > tr > td:last-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tbody > tr > td:last-child,
+.content-region .block-views > .table-bordered > tfoot > tr > td:last-child,
+.sidebar-1-region .block-views > .table-bordered > tfoot > tr > td:last-child,
+.sidebar-2-region .block-views > .table-bordered > tfoot > tr > td:last-child,
+.content-region .block-views > .table-responsive > .table-bordered > tfoot > tr > td:last-child,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tfoot > tr > td:last-child,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tfoot > tr > td:last-child {
+  border-right: 0;
+}
+.content-region .block-views > .table-bordered > thead > tr:last-child > th,
+.sidebar-1-region .block-views > .table-bordered > thead > tr:last-child > th,
+.sidebar-2-region .block-views > .table-bordered > thead > tr:last-child > th,
+.content-region .block-views > .table-responsive > .table-bordered > thead > tr:last-child > th,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > thead > tr:last-child > th,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > thead > tr:last-child > th,
+.content-region .block-views > .table-bordered > tbody > tr:last-child > th,
+.sidebar-1-region .block-views > .table-bordered > tbody > tr:last-child > th,
+.sidebar-2-region .block-views > .table-bordered > tbody > tr:last-child > th,
+.content-region .block-views > .table-responsive > .table-bordered > tbody > tr:last-child > th,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tbody > tr:last-child > th,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tbody > tr:last-child > th,
+.content-region .block-views > .table-bordered > tfoot > tr:last-child > th,
+.sidebar-1-region .block-views > .table-bordered > tfoot > tr:last-child > th,
+.sidebar-2-region .block-views > .table-bordered > tfoot > tr:last-child > th,
+.content-region .block-views > .table-responsive > .table-bordered > tfoot > tr:last-child > th,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tfoot > tr:last-child > th,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tfoot > tr:last-child > th,
+.content-region .block-views > .table-bordered > thead > tr:last-child > td,
+.sidebar-1-region .block-views > .table-bordered > thead > tr:last-child > td,
+.sidebar-2-region .block-views > .table-bordered > thead > tr:last-child > td,
+.content-region .block-views > .table-responsive > .table-bordered > thead > tr:last-child > td,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > thead > tr:last-child > td,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > thead > tr:last-child > td,
+.content-region .block-views > .table-bordered > tbody > tr:last-child > td,
+.sidebar-1-region .block-views > .table-bordered > tbody > tr:last-child > td,
+.sidebar-2-region .block-views > .table-bordered > tbody > tr:last-child > td,
+.content-region .block-views > .table-responsive > .table-bordered > tbody > tr:last-child > td,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tbody > tr:last-child > td,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tbody > tr:last-child > td,
+.content-region .block-views > .table-bordered > tfoot > tr:last-child > td,
+.sidebar-1-region .block-views > .table-bordered > tfoot > tr:last-child > td,
+.sidebar-2-region .block-views > .table-bordered > tfoot > tr:last-child > td,
+.content-region .block-views > .table-responsive > .table-bordered > tfoot > tr:last-child > td,
+.sidebar-1-region .block-views > .table-responsive > .table-bordered > tfoot > tr:last-child > td,
+.sidebar-2-region .block-views > .table-responsive > .table-bordered > tfoot > tr:last-child > td {
+  border-bottom: 0;
+}
+.content-region .block-views > .table-responsive,
+.sidebar-1-region .block-views > .table-responsive,
+.sidebar-2-region .block-views > .table-responsive {
+  border: 0;
+  margin-bottom: 0;
+}
+.content-region .block-views > .panel-heading,
+.sidebar-1-region .block-views > .panel-heading,
+.sidebar-2-region .block-views > .panel-heading {
+  color: #ffffff;
+  background-color: #02426f;
+  border-color: #02426f;
+}
+.content-region .block-views > .panel-heading + .panel-collapse .panel-body,
+.sidebar-1-region .block-views > .panel-heading + .panel-collapse .panel-body,
+.sidebar-2-region .block-views > .panel-heading + .panel-collapse .panel-body {
+  border-top-color: #02426f;
+}
+.content-region .block-views > .panel-footer + .panel-collapse .panel-body,
+.sidebar-1-region .block-views > .panel-footer + .panel-collapse .panel-body,
+.sidebar-2-region .block-views > .panel-footer + .panel-collapse .panel-body {
+  border-bottom-color: #02426f;
+}
+.content-region .block-views .block-title,
+.sidebar-1-region .block-views .block-title,
+.sidebar-2-region .block-views .block-title {
+  color: #ffffff;
+  background-color: #02426f;
+  border-color: #02426f;
+  padding-left: 50px;
+}
+.content-region .block-views .block-title + .panel-collapse .panel-body,
+.sidebar-1-region .block-views .block-title + .panel-collapse .panel-body,
+.sidebar-2-region .block-views .block-title + .panel-collapse .panel-body {
+  border-top-color: #02426f;
+}
+.content-region .block-views .block-title a,
+.sidebar-1-region .block-views .block-title a,
+.sidebar-2-region .block-views .block-title a {
+  color: white;
+}
+.content-region .block-views .block-title i,
+.sidebar-1-region .block-views .block-title i,
+.sidebar-2-region .block-views .block-title i {
+  width: 50px;
+  margin-left: -50px;
 }
