--- a/less/content.less
+++ b/less/content.less
@@ -207,6 +207,25 @@
 						font-size: 36px;
 					}
 				}
+
+				a:hover,
+				a:focus {
+					&.facebook-icon {
+						color: #3B5998;
+					}
+					&.twitter-icon {
+						color: #0099CC;
+					}
+					&.youtube-icon {
+						color: #CC181E;
+					}
+					&.vimeo-icon {
+						color: #1ab7ea;
+					}
+					&.googleplus-icon {
+						color: #DD4B39;
+					}
+				}
 			}
 		}
 
