--- a/less/content.less
+++ b/less/content.less
@@ -128,6 +128,11 @@
 					margin-bottom: 10px;
 				}
 			}
+
+			&.views-field-field-date-text,
+			&.views-field-field-episode-date {
+				font-style: italic;
+			}
 		}
 	}
 }
