--- a/less/content.less
+++ b/less/content.less
@@ -150,8 +150,8 @@
 			position: relative;
 			float: right;
 			width: 50%;
-			padding-left:  (@grid-gutter-width / 2);
-			padding-right: (@grid-gutter-width / 2);
+			padding-left:  @grid-gutter-width;
+			padding-right: ( ( @grid-gutter-width / 2 ) - 10px );
 
 			img {
 				.img-responsive;
