--- a/css/style.css
+++ b/css/style.css
@@ -7291,18 +7291,39 @@ table .checkbox input[type="checkbox"] {
   font-weight: bold;
 }
 .content-region .block-system .block-panel .content .field-name-field-image,
-.content-region .block-system .block-panel .content .field-name-field-series-image {
+.content-region .block-system .block-panel .content .field-name-field-series-image,
+.content-region .block-system .block-panel .content .field-name-field-addthis {
   position: relative;
   float: right;
   width: 50%;
   padding-left: 30px;
-  padding-right: 5px;
+  margin-right: 5px;
 }
 .content-region .block-system .block-panel .content .field-name-field-image img,
-.content-region .block-system .block-panel .content .field-name-field-series-image img {
+.content-region .block-system .block-panel .content .field-name-field-series-image img,
+.content-region .block-system .block-panel .content .field-name-field-addthis img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.content-region .block-system .block-panel .content .field-name-field-addthis {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  margin-top: 15px;
+}
+.content-region .block-system .block-panel .content .field-name-field-addthis blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
+.content-region .block-system .block-panel .content .field-name-field-addthis .addthis_button_facebook {
+  clear: left;
 }
 .footer {
   border: 0px;
