--- a/less/content.less
+++ b/less/content.less
@@ -40,7 +40,8 @@
 .content-region {
 	.block-system .block-panel {
 		.panel;
-		.panel-variant(@cbf-content-blue; @cbf-dark-blue; @cbf-content-blue; @cbf-content-blue);
+		.panel-variant(white; @cbf-dark-blue; white; white);
+		box-shadow: 0 0 0 white;
 	}
 
 	.block-views .block-panel {
