--- a/less/content.less
+++ b/less/content.less
@@ -144,11 +144,11 @@
 
 		.field-name-field-date-text {
 			font-weight: bold;
+			margin-bottom: 15px;
 		}
 
 		.field-name-field-image,
-		.field-name-field-series-image,
-		.field-name-field-addthis {
+		.field-name-field-series-image {
 			position: relative;
 			float: right;
 			width: 50%;
