--- a/less/variables.less
+++ b/less/variables.less
@@ -55,7 +55,7 @@
 @font-size-large:         ceil(@font-size-base * 1.25); // ~18px
 @font-size-small:         ceil(@font-size-base * 0.85); // ~12px
 
-@font-size-h1:            24px;
+@font-size-h1:            22px;
 @font-size-h2:            20px;
 @font-size-h3:            18px;
 @font-size-h4:            16px;
@@ -276,8 +276,8 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 
 @navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-bg:                #fff;
+@navbar-default-border:            #fff;
 
 // Navbar links
 @navbar-default-link-color:                #777;
