--- a/less/header.less
+++ b/less/header.less
@@ -1,9 +1,9 @@
 #navbar {
 	.navbar-header {
 		.make-xs-column(12);
-		.make-sm-column(4);
-		.make-md-column(4);
-		.make-lg-column(4);
+		.make-sm-column(5);
+		.make-md-column(5);
+		.make-lg-column(5);
 
 		.logo {
 			width: 85%;
@@ -15,14 +15,20 @@
 	}
 
 	.navbar-collapse {
-		.make-sm-column(8);
-		.make-md-column(8);
-		.make-lg-column(8);
+		.make-sm-column(7);
+		.make-md-column(7);
+		.make-lg-column(7);
 
 		.navbar-nav {
 			.active {
 				font-weight: bold;
 				background-color: inherit;
+			}
+
+			.leaf {
+				a {
+					padding: 20px 10px;
+				}
 			}
 		}
 	}
