--- a/css/style.css
+++ b/css/style.css
@@ -7319,6 +7319,7 @@ table .checkbox input[type="checkbox"] {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  clear: left;
   margin-top: 15px;
 }
 .content-region .block-system .block-panel .content .field-name-field-addthis blockquote {
