--- a/css/style.css
+++ b/css/style.css
@@ -6660,37 +6660,37 @@ table .checkbox input[type="checkbox"] {
   margin: 5px;
 }
 #page-header .region-header .carousel .carousel-indicators {
+  left: 70%;
+  width: 30%;
+  margin-left: 0;
   bottom: 0px;
 }
-#page-header .region-header .carousel .carousel-indicators .active {
-  background-color: #02426f;
-}
-#page-header .region-header .carousel .carousel-indicators li {
-  border-color: #02426f;
+#page-header .region-header .carousel .carousel-inner {
+  background: #02426f;
 }
 #page-header .region-header .carousel .carousel-inner .item a {
+  color: white;
   display: block;
-  padding: 0 15%;
+  padding: 0;
 }
 #page-header .region-header .carousel .carousel-inner .item a img {
-  width: 100%;
+  width: 70%;
   display: block;
   max-width: 100%;
   height: auto;
 }
 #page-header .region-header .carousel .carousel-inner .item .carousel-caption {
-  color: #02426f;
+  color: white;
   text-shadow: none;
-  background: rgba(255, 255, 255, 0.9);
-  padding-bottom: 30px;
-  padding-top: 0;
-  left: 15%;
-  right: 15%;
-  bottom: 0;
+  padding: 0 10px 30px 10px;
+  left: 70%;
+  top: 5%;
+  right: 0;
 }
 #page-header .region-header .carousel .carousel-control {
   font-size: 80px;
   line-height: 100%;
+  width: 5%;
 }
 .content-region {
   float: left;
