--- a/css/style.css
+++ b/css/style.css
@@ -6690,7 +6690,13 @@ table .checkbox input[type="checkbox"] {
 #page-header .region-header .carousel .carousel-control {
   font-size: 80px;
   line-height: 100%;
-  width: 5%;
+  width: 10%;
+}
+#page-header .region-header .carousel .carousel-control.left {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
+}
+#page-header .region-header .carousel .carousel-control.right {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
 }
 .content-region {
   float: left;
