--- a/less/header.less
+++ b/less/header.less
@@ -104,7 +104,15 @@
 			.carousel-control {
 				font-size: 80px;
 				line-height: 100%;
-				width: 5%;
+				width: 10%;
+
+				&.left {
+					background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
+				}
+
+				&.right {
+					background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
+				}
 			}
 		}
 	}
