--- a/css/style.css
+++ b/css/style.css
@@ -6665,6 +6665,12 @@ table .checkbox input[type="checkbox"] {
   margin-left: 0;
   bottom: 0px;
 }
+@media screen and (min-width: 1200px) {
+  #page-header .region-header .carousel .carousel-indicators {
+    left: 50%;
+    width: 50%;
+  }
+}
 #page-header .region-header .carousel .carousel-inner {
   background: #02426f;
 }
@@ -6679,13 +6685,25 @@ table .checkbox input[type="checkbox"] {
   max-width: 100%;
   height: auto;
 }
+@media screen and (min-width: 1200px) {
+  #page-header .region-header .carousel .carousel-inner .item a img {
+    width: 50%;
+  }
+}
 #page-header .region-header .carousel .carousel-inner .item .carousel-caption {
   color: white;
   text-shadow: none;
-  padding: 0 10px 30px 10px;
-  left: 70%;
-  top: 5%;
   right: 0;
+  top: 5%;
+  left: 70%;
+  padding: 0 10px 30px;
+}
+@media screen and (min-width: 1200px) {
+  #page-header .region-header .carousel .carousel-inner .item .carousel-caption {
+    top: 15%;
+    left: 50%;
+    padding: 0 10% 30px;
+  }
 }
 #page-header .region-header .carousel .carousel-control {
   font-size: 80px;
