--- a/less/header.less
+++ b/less/header.less
@@ -68,8 +68,19 @@
 
 		.carousel {
 			.carousel-indicators {
-				left: 70%;
-				width: 30%;
+					left: 70%;
+					width: 30%;
+// @media @tablet {
+//	...
+// }
+// @media @normal {
+//	...
+// }
+				@media @wide {
+					left: 50%;
+					width: 50%;
+				}
+
 				margin-left: 0;
 				bottom: 0px;
 			}
@@ -84,7 +95,10 @@
 						padding: 0;
 
 						img {
-							width: 70%;
+								width: 70%;
+							@media @wide {
+								width: 50%;
+							}
 
 							.img-responsive;
 						}
@@ -93,10 +107,16 @@
 					.carousel-caption {
 						color: white;
 						text-shadow: none;
-						padding: 0 10px 30px 10px;
-						left: 70%;
-						top: 5%;
 						right: 0;
+
+							top: 5%;
+							left: 70%;
+							padding: 0 10px 30px;
+						@media @wide {
+							top: 15%;
+							left: 50%;
+							padding: 0 10% 30px;
+						}
 					}
 				}
 			}
