--- a/css/style.css
+++ b/css/style.css
@@ -6710,12 +6710,20 @@ table .checkbox input[type="checkbox"] {
   top: 0;
   left: 0;
   padding: 0 10px 0px;
+  font-size: 12px;
+}
+#page-header .region-header .carousel .carousel-inner .item .carousel-caption h3 {
+  font-size: 12px;
 }
 @media screen and (min-width: 768px) {
   #page-header .region-header .carousel .carousel-inner .item .carousel-caption {
     top: 5%;
     left: 70%;
     padding: 0 10px 30px;
+    font-size: 14px;
+  }
+  #page-header .region-header .carousel .carousel-inner .item .carousel-caption h3 {
+    font-size: 18px;
   }
 }
 @media screen and (min-width: 1200px) {
