--- a/css/style.css
+++ b/css/style.css
@@ -6687,6 +6687,7 @@ table .checkbox input[type="checkbox"] {
 }
 #page-header .region-header .carousel .carousel-inner .item a img {
   width: 100%;
+  margin-bottom: 50%;
   opacity: 0.5;
   display: block;
   max-width: 100%;
@@ -6695,6 +6696,7 @@ table .checkbox input[type="checkbox"] {
 @media screen and (min-width: 768px) {
   #page-header .region-header .carousel .carousel-inner .item a img {
     width: 70%;
+    margin-bottom: 0;
     opacity: 1.0;
   }
 }
@@ -6707,23 +6709,16 @@ table .checkbox input[type="checkbox"] {
   color: white;
   text-shadow: none;
   right: 0;
-  top: 0;
+  bottom: -120px;
   left: 0;
   padding: 0 10px 0px;
-  font-size: 12px;
-}
-#page-header .region-header .carousel .carousel-inner .item .carousel-caption h3 {
-  font-size: 12px;
 }
 @media screen and (min-width: 768px) {
   #page-header .region-header .carousel .carousel-inner .item .carousel-caption {
+    bottom: 0;
     top: 5%;
     left: 70%;
     padding: 0 10px 30px;
-    font-size: 14px;
-  }
-  #page-header .region-header .carousel .carousel-inner .item .carousel-caption h3 {
-    font-size: 18px;
   }
 }
 @media screen and (min-width: 1200px) {
